# tcc-vem-deep-learning

./: .gitignore  CMakeLists.txt  Gemini.md  README.md  axisymmetric.py  benchmark_solver.py  bootstrap.sh  build_direct.sh  check_module.py  find_module.py  generate_dataset_parallel.py  main.cpp  polivem_middleware.sh  polygon_eigen.json  polygon_voronoi_v2.json  rectangular_voronoi.json  rectangular_voronoi_v2.json  requirements.txt  run.sh  test_beam.py  test_modules.py  test_moments.py  test_solver.py  toolchain.cmake
00_FINAL_SCRIPTS/: dataloader.py  model.py  prepare_dataset.py  train.py  validate_dataloader.py  validate_npz.py
axisymmetric_prot/: README.md  axisymmetric.py  implementation.md  patch_test_fem.py  patch_test_vem.py  pressure_vessel_vem.py  volumetric_locking.py
data/: distorted_mesh.json  polygon_eigen.json  portic_128.json  portic_16.json  portic_2.json  portic_32.json  portic_64.json  portic_8.json  rectangular_eigen.json  rectangular_eigen_v2.json  unit_rectangular_eigen.json  unit_square_16.json  unit_square_triang_16.json
data/_distorted_mesh/: distorted_mesh_16.json  distorted_mesh_32.json  distorted_mesh_4.json  distorted_mesh_64.json  distorted_mesh_8.json  distorted_mesh_h0p031.json  distorted_mesh_h0p063.json  distorted_mesh_h0p125.json  distorted_mesh_h0p250.json  distorted_mesh_h0p500.json
data/_serendipity/: serendipity_mesh_h0p0313.json  serendipity_mesh_h0p0625.json  serendipity_mesh_h0p1250.json  serendipity_mesh_h0p2500.json  serendipity_mesh_h0p5000.json
data/_voronoi/: voronoi_mesh_h0p0625.json  voronoi_mesh_h0p1250.json  voronoi_mesh_h0p2500.json
docs/: doc_integration.MD  doc_testing.MD  doc_use_parabolic_solver.MD
docs/chats/: chat_fix_matrix.MD
docs/corrections/: boundary_conditions.MD  correct_critical_matrix_issues.MD  correct_mass_conservation.MD  correct_projection_matrices.MD  correct_time_scheme.MD  current_status_analysis.MD  fixed_mass_conservation.MD  fixed_scaling_constraint.MD  fixed_time_scheme.MD  fixes_applied_summary.MD
docs/linear_algebra/: doc_dense_cholesky_decomposition.MD  doc_dense_gauss_elimination.MD  doc_eigen_comparision.MD  doc_power_method.md  doc_sparse_gauss_elimination.MD
docs/notes/: testes_pre_processing.txt
docs/other/: doc_boundary.MD  doc_parabolic.MD  doc_time_scheme.MD  doc_vem_parabolic_formulation.MD
examples/: CMakeCache.txt  Makefile  axisymmetric.cpp  beam_main.cpp  cmake_install.cmake  datasets_ml.cpp  elastic_2d_mathematica.cpp  elestic_2d.cpp  generate_dataset.cpp  generate_dataset_ANALYTICAL.cpp  generate_dataset_NOVO.cpp  libmaterial.dylib  main_simple.cpp  run_single_case.cpp  run_single_case_2D copy.cpp  run_single_case_2D.cpp  saving_results.cpp  voronoi_main.cpp
examples/2D_examples/: test_vem_2d_validation.cpp
examples/lib/mesh/: Makefile  (+1 more)
examples/middleware/: Makefile  cmake_install.cmake
gmsh/: mesh_converter.py  placa_com_furo.msh  placa_com_furo_bem_boa.geo  placa_com_furo_bem_boa.msh  placa_com_furo_ruim.geo  teste.geo
gmsh/py_files/: dataset_amostra_01.json  malha_com_bcs.json  mesh_converter.py  mesh_converter_2.py  mesh_generator.py  visualizacao_gmsh.msh
include/linear_algebra/: cholesky_decomposition.hpp  gauss_elimination.hpp  power_method.hpp  sparse_cholesky_decomposition.hpp  sparse_gauss_elimination.hpp
include/material/: mat.hpp
include/mesh/: beam.hpp  datasource.hpp  delaunay.hpp  helpers.hpp  uniform.hpp  voronoi.hpp  voronoiMesh.hpp
include/models/: enums.hpp  templates.hpp
include/solver/: axisymmetric.hpp  beam1d.hpp  linearElastic2d.hpp  nonlinear2d.hpp  parabolic.hpp
include/tests/: test_linear_algebra.hpp  test_time_scheme.hpp
include/utils/: boundary.hpp  errors.hpp  integration.hpp  logging.hpp  matrix_helper.hpp  operations.hpp  scope_timer.hpp  time_scheme.hpp
latex/: main 2.aux  main.aux  main.bbl  main.bcf  main.blg  main.tex  main.toc
latex/capitulos/: introducao.txt  objetivos.txt  revisao_bibliografica.txt
lib/linear_algebra/: CMakeLists.txt  cholesky_decomposition.cpp  gauss_elimination.cpp  liblinear_algebra.dylib  power_method.cpp  sparse_cholesky_decomposition.cpp  sparse_gauss_elimination.cpp
lib/material/: mat.cpp
lib/mesh/: CMakeLists.txt  beam.cpp  datasource.cpp  delaunay.cpp  helpers.cpp  uniform.cpp  voronoi.cpp  voronoiMesh.cpp
lib/solver/: CMakeLists.txt  axisymmetric.cpp  beam1d.cpp  linearElastic2d.cpp  nonlinear2d.cpp  parabolic.cpp
lib/tests/: CMakeLists.txt  test_linear_algebra.cpp  test_time_scheme.cpp
lib/utils/: CMakeLists.txt  boundary.cpp  errors.cpp  integration.cpp  logging.cpp  matrix_helper.cpp  operations.cpp  time_scheme.cpp
log/: log_1698013957.json  log_1698543998.json
middleware/: CMakeLists.txt  Makefile  README.md  api.py  cmake_install.cmake  pyproject.toml  setup.py
middleware/domain/: models.py
middleware/include/: polivem_python.hpp
middleware/polivem/: __init__.py
middleware/src/: beam_wrapper.cpp  enums_wrapper.cpp  material_wrapper.cpp  minimal_module.cpp  polivem_module.cpp  solver_wrapper.cpp
middleware/utils/: formatting.py  geometry.py  responses.py
ml/experiments_NEW/: data_collector.py  evaluate.py  malha_quadrada.py  models.py  monitor.py  physics.py  plot_generator.py  train.py  train_RTX6000.py  train_comGradNorm.py  utils_data.py
ml/experiments_OLD_OLD/: evaluate_beamnet.py  evaluate_uncertainty.py  evaluate_uncertainty_RobustScaler.py  train_beamnet.py  train_beamnet_dropout_PowerTransformer.py  train_beamnet_dropout_RobustScaler.py  utils_data.py  utils_data_RobustScaler.py
models/meshes_1000_samples_20251130_105243/: training_log.txt
models/meshes_1000_samples_20251130_121641/: training_log.txt
models/meshes_10_samples_20251130_092610/: training_log.txt
models/meshes_500_samples_20251130_093029/: training_log.txt
models/meshes_50_samples_20251130_092923/: training_log.txt
models/meshes_5_samples_20251130_092058/: training_log.txt
postprocessing/: convergence_analysis.py  mesh_visualizer.py  plot_mesh.py  quick_mesh_plot.py  vem_convergence_analyzer.py
uml_diagrams/: class_diagram.mermaid  use_case.mermaid
(+2526 files in other folders)
